2011-05-24  MORITA Hajime  <morrita@google.com>

RenderText with empty text is not created inside ShadowContentElement
        https://bugs.webkit.org/show_bug.cgi?id=61111

        - Added tests that capture the probelem.
        - Updated expectations that were wrong.

        * fast/html/details-replace-summary-child.html: Added.
        * fast/html/details-replace-text.html: Added.
        * platform/gtk/fast/html/details-no-summary4-expected.txt:
        * platform/gtk/fast/html/details-open-javascript-expected.txt:
        * platform/gtk/fast/html/details-open4-expected.txt:
        * platform/mac/fast/html/details-add-details-child-2-expected.txt:
        * platform/mac/fast/html/details-no-summary4-expected.txt:
        * platform/mac/fast/html/details-open-javascript-expected.txt:
        * platform/mac/fast/html/details-open4-expected.txt:
        * platform/mac/fast/html/details-replace-summary-child-expected.png: Added.
        * platform/mac/fast/html/details-replace-summary-child-expected.txt: Added.
        * platform/mac/fast/html/details-replace-text-expected.png: Added.
        * platform/mac/fast/html/details-replace-text-expected.txt: Added.
        * platform/qt/fast/html/details-no-summary4-expected.txt:
        * platform/qt/fast/html/details-open-javascript-expected.txt:
        * platform/qt/fast/html/details-open4-expected.txt:
2011-05-24  MORITA Hajime  <morrita@google.com>

        Reviewed by Dimitri Glazkov.

        RenderText with empty text is not created inside ShadowContentElement
        https://bugs.webkit.org/show_bug.cgi?id=61111

        - Changed Text::rendererIsNeeded() to be shadow-aware.
        - previousRenderer(), nextRenderer() and parentRenderer() on NodeRenderingContext is now
          safe even if it's used with an attached node, which was originally used only during attach().
          We need this change because these APIs are called inside CharacterData::updateRenderer() callstack.

        Tests: fast/html/details-replace-summary-child.html
               fast/html/details-replace-text.html

        * dom/NodeRenderingContext.cpp:
        (WebCore::NodeRenderingContext::NodeRenderingContext):
        (WebCore::NodeRenderingContext::nextRenderer):
        (WebCore::NodeRenderingContext::previousRenderer):
        (WebCore::NodeRenderingContext::parentRenderer):
        (WebCore::NodeRenderingContext::shouldCreateRenderer):
        * dom/NodeRenderingContext.h:
        (WebCore::NodeRenderingContext::parentNodeForRenderingAndStyle):
        * dom/Text.cpp:
        (WebCore::Text::rendererIsNeeded):

Canonical link: https://commits.webkit.org/76902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87351 268f45cc-cd09-0410-ab3c-d52691b4dbfc